--- a/example/public/index.html
+++ b/example/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Remote data | Handling Asynchronous fetching of data with React & Redux</title>
+    <title>Remote data | Handle modeling, fetching, and displaying remote data in React/Redux apps</title>
   </head>
 
   <body>
